# Xendris

./: .gitignore  README.md  lake-manifest.json  lakefile.lean  pyproject.toml  pyrightconfig.json
backlog/: XENDRIS_ROADMAP_2026.md  XENDRIS_TASKS.md  phygn_core_backlog.json
benchmarks/: BENCH-CAMPAIGN-002-SYNTH-VISIBILITY-001.json  __init__.py
docs/: 00_PHYGN_MASTER_CONTEXT_v0_3.md  01_PHYGN_BACKEND_ARCHITECTURE_v0_3.md  02_PHYGN_FRONTEND_ARCHITECTURE_v0_3.md  03_PHYGN_API_SPEC_v0_3.md  04_PHYGN_BENCHMARKS_AND_TESTS_v0_3.md  05_PHYGN_ROADMAP_v0_3_TO_v0_4.md  06_PHYGN_CODEX_CONTINUATION_PROMPT.md  07_PHYGN_FRONTEND_DASHBOARD_FULL_SPEC_v0_3.md  08_PATCH_PHYGN_SHADCN_PRESET_COMMAND_v0_3.md  09_PATCH_PHYGN_CODEX_FULLSTACK_PROMPT_PRESET_v0_3.md  100_PHYGN_V1_7_IDEA_TO_HYPOTHESIS_AND_PREDICTION_ACCURACY_GOAL.md  101_PHYGN_IDEA_TO_HYPOTHESIS_UX_PROTOCOL.md  102_PHYGN_PREDICTION_ACCURACY_LEDGER_AND_CALIBRATION.md  103_PHYGN_MODEL_AGNOSTIC_RUNTIME_AND_OPENSOURCE_MODELS.md  104_PHYGN_CODEX_V1_7_IDEA_TO_HYPOTHESIS_ACCURACY_RUNTIME_PROMPT.md  105_PHYGN_V1_7_IDEA_TO_HYPOTHESIS_ACCURACY_RUNTIME_RESULTS.md  106_PHYGN_V1_8_COPILOT_TRUTH_BOUNDARY_UI_GOAL.md  107_PHYGN_COPILOT_CHAT_UI_AND_HYPOTHESIS_WORKSPACE.md  108_PHYGN_SOCRATIC_QUESTION_ENGINE_AND_NEXT_BEST_QUESTION_PROTOCOL.md  109_PHYGN_TRUTH_BOUNDARY_STATUS_AND_CHEAP_MODEL_ORCHESTRATION.md  10_PATCH_PHYGN_SHADCN_DASHBOARD_01_STRUCTURE_v0_3.md  110_PHYGN_CODEX_V1_8_COPILOT_TRUTH_BOUNDARY_UI_PROMPT.md  111_PHYGN_V1_8_COPILOT_TRUTH_BOUNDARY_UI_RESULTS.md  112_PHYGN_V1_9_BUSINESS_MODEL_VALIDATION_GATE_GOAL.md  (+365 more)
formal/: FrC.lean
(+2121 files in other folders)
